--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet">
 
   <!--  Styles  -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="main.css">
 
   <!-- Scripts -->
   <script src="scripts/app.js" defer></script>
@@ -89,7 +89,7 @@
    <template data-previous-sol-template>
       <div class="previous-day">
         <h3 class="previous-day__sol">
-          Sol
+          Sol 371
           <span data-sol></span>
         </h3>
         <p class="previous-day__date" data-date></p>
