--- a/index.html
+++ b/index.html
@@ -5,57 +5,42 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>Mars weather</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
   <!-- Google fonts   -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet">
 
   <!--  Styles  -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Scripts -->
-  <script src="scripts/app.js" defer></script>
+  <script src="scripts/index.js" defer></script>
 </head>
 <body>
    
    <main class="mars-current-weather">
-     <h1 class="main-title">Latest weather at Elysium Planitia</h1>
+     <h1 class="main-title">Latest weather at Elysium Plantitia</h1>
 
      <div class="date">
-       <h2 class="section-title section-title--date">
-         Sol 
-         <span data-current-sol>375</span>
-        </h2>
-       <p class="date__day" data-current-date></p>
+       <h2 class="section-title section-title--date">Sol 377</h2>
+       <p class="date__day">September 31</p>
      </div>
 
      <div class="temp">
        <h2 class="section-title">Temperature</h2>
-       <p class="reading">
-         High:
-         <span data-current-temp-high></span>
-         °<span data-temp-unit></span>
-        </p>
-       <p class="reading">
-         Low:
-         <span data-current-temp-low></span>
-         °<span data-temp-unit></span>
-        </p>
+       <p class="reading">High: -20°C</p>
+       <p class="reading">Low: -120°C</p>
      </div>
 
      <div class="wind">
        <h2 class="section-title">Wind</h2>
-       <p class="reading">
-         <span data-wind-speed></span>
-         <span data-speed-unit></span>
-        </p>
+       <p class="reading">75 kph</p>
 
        <div class="wind__direction">
-         <p class="sr-only" data-wind-direction-text></p>
+         <p class="sr-only">45deg</p>
 
          <!-- update --direction custom prop
               to change arrow direction -->
-         <div class="wind__arrow" data-wind-direction-arrow></div>
+         <div class="wind__arrow"></div>
        </div>
      </div> 
 
@@ -69,7 +54,7 @@
        <input type="radio" id="cel" name="unit" checked>
        <!-- when unit__toggle is clicked
             checkbox needs to change -->
-       <button class="unit__toggle" data-unit-toggle></button>
+       <button class="unit__toggle"></button>
        <label for="fah">°F</label>
        <input type="radio" id="fah" name="unit">
      </div> 
@@ -83,30 +68,58 @@
 
      <h2 class="main-title previous-weather__title">Previous 7 days</h2> 
 
-     <div class="previous-days" data-previous-sols></div>
+     <div class="previous-days">
+       <div class="previous-day">
+         <h3 class="previous-day__sol"> Sol 371</h3>
+         <p class="previous-day__date">Septermber 31</p>
+         <p class="previous-day__temp">High: -20°C</p>
+         <p class="previous-day__temp">Low: -120°C</p>
+         <button class="previous-day__more-info">more info</button>
+        </div>
+        <div class="previous-day">
+          <h3 class="previous-day__sol"> Sol 371</h3>
+          <p class="previous-day__date">Septermber 31</p>
+          <p class="previous-day__temp">High: -20°C</p>
+          <p class="previous-day__temp">Low: -120°C</p>
+          <button class="previous-day__more-info">more info</button>
+         </div>
+         <div class="previous-day">
+          <h3 class="previous-day__sol"> Sol 371</h3>
+          <p class="previous-day__date">Septermber 31</p>
+          <p class="previous-day__temp">High: -20°C</p>
+          <p class="previous-day__temp">Low: -120°C</p>
+          <button class="previous-day__more-info">more info</button>
+         </div>
+         <div class="previous-day">
+          <h3 class="previous-day__sol"> Sol 371</h3>
+          <p class="previous-day__date">Septermber 31</p>
+          <p class="previous-day__temp">High: -20°C</p>
+          <p class="previous-day__temp">Low: -120°C</p>
+          <button class="previous-day__more-info">more info</button>
+         </div>
+         <div class="previous-day">
+          <h3 class="previous-day__sol"> Sol 371</h3>
+          <p class="previous-day__date">Septermber 31</p>
+          <p class="previous-day__temp">High: -20°C</p>
+          <p class="previous-day__temp">Low: -120°C</p>
+          <button class="previous-day__more-info">more info</button>
+         </div>
+         <div class="previous-day">
+          <h3 class="previous-day__sol"> Sol 371</h3>
+          <p class="previous-day__date">Septermber 31</p>
+          <p class="previous-day__temp">High: -20°C</p>
+          <p class="previous-day__temp">Low: -120°C</p>
+          <button class="previous-day__more-info">more info</button>
+         </div>
+         <div class="previous-day">
+          <h3 class="previous-day__sol"> Sol 371</h3>
+          <p class="previous-day__date">Septermber 31</p>
+          <p class="previous-day__temp">High: -20°C</p>
+          <p class="previous-day__temp">Low: -120°C</p>
+          <button class="previous-day__more-info">more info</button>
+         </div>
+     </div>
    </div>
-
-   <template data-previous-sol-template>
-      <div class="previous-day">
-        <h3 class="previous-day__sol">
-          Sol 371
-          <span data-sol></span>
-        </h3>
-        <p class="previous-day__date" data-date></p>
-        <p class="previous-day__temp">
-          High:
-          <span data-temp-high></span>
-          °<span data-temp-unit></span>
-        </p>
-        <p class="previous-day__temp">
-          Low:
-          <span data-temp-low></span>
-          °<span data-temp-unit></span>
-        </p>
-        <button class="previous-day__more-info" data-select-button>more info</button>
-      </div>
-   </template>
-    
 
   
 </body>
